On mobile, fix navigation

--- a/client/src/components/css/OneArticle.css
+++ b/client/src/components/css/OneArticle.css
@@ -506,8 +506,9 @@ ul footer {
   }
 
   .bodys .h4 {
-    left: 30%;
+    right: 47%;
     position: relative;
+    top: 4px;
   }
 
   .author {
